--- a/courses/an20/homework/ha10.tex
+++ b/courses/an20/homework/ha10.tex
@@ -211,7 +211,7 @@ $\varphi^n$ \textbf{genau einen} Fixpunkt.
 Sei nun $x_2 \ne x^*$ ein weiterer Fixpunkt von $\varphi$. Dann ist
 \[
   x_2 = \varphi\qty\big(x_2) = \varphi\qty\big(\varphi\qty\big(x_2))
-  = \ldots = \varphi^n\qty\big(x^2),
+  = \ldots = \varphi^n\qty\big(x_2),
 \]
 ein Widerspruch zum Banachschen Fixpunktsatz.
 $\Rightarrow \varphi$ besitzt genau einen Fixpunkt.
