fix: Sup condition

--- a/courses/an20/homework/ha10.tex
+++ b/courses/an20/homework/ha10.tex
@@ -253,7 +253,7 @@ Weiter sei $M \coloneqq \qty\big{f \in C([0, 1]) \colon f(0) = 0, f(1) = 1}$.
       d_{\infty}(\varphi(f), \varphi(g))
       &= \sup_{x \in \left[0, \frac{1}{3}\right)} \frac{f(3x) - g(3x)}{2}  & \\
       &\overset{f(3x), g(3x) \in [0, 1]}\leq \frac{1}{2}
-      \sup _{x \in \left[0, \frac{1}{3}\right)} \abs{f(x) - g(x)}
+      \sup _{x \in \qty[0, 1]} \abs{f(x) - g(x)}
       = \frac{1}{2} d_{\infty}(f, g)
     \end{flalign*}
 
