--- a/courses/an20/exercises/ex11.tex
+++ b/courses/an20/exercises/ex11.tex
@@ -60,7 +60,7 @@
       \item $J_f(x) = - \qty\Big(J_F^{(y)}\qty(x, f(x)))^{-1} \cdot J_F^{(x)}\qty(x, f(x))$
       \end{itemize}
       Insofern gilt $\overline{y} = f(\overline{x})$ und
-      $J_f(\overline{x}) = - \qty(J_f^{(y)}(\overline{x}, \overline{y}))^{-1} J_F^{(x)}(\overline{x}, \overline{y})$
+      $J_f(\overline{x}) = - \qty(J_F^{(y)}(\overline{x}, \overline{y}))^{-1} J_F^{(x)}(\overline{x}, \overline{y})$
     \end{minipage}
   }
 
@@ -120,7 +120,7 @@ $\qty\big(x_0, y_0, u_0, v_0) = \qty(\frac{1}{5}, \frac{2}{5}, \frac{2}{5}, \fra
   \]
   Insbesondere ist $\det J_F^{(u, v)} (x_0, y_0, u_0, v_0) = -\frac{8}{25} < 0$.
 
-  $\Rightarrow \exists \qty\Big(J_F^{(u, v)}\qty(x_0, y_0, u_0, v_0))$
+  $\Rightarrow \exists \qty\Big(J_F^{(u, v)}\qty(x_0, y_0, u_0, v_0))^{-1}$
 
   Wie können wir darauf schließen, dass es eine Umgebung des Punktes
   $\qty(x_0, y_0, u_0, v_0)$ gibt, in der $J_F^{(u, v)}$ invertierbar ist?
