--- a/courses/an20/homework/ha11.tex
+++ b/courses/an20/homework/ha11.tex
@@ -185,14 +185,14 @@ $\frac{\partial}{\partial x}\norm{x}^2 = 2\norm{x} \cdot \frac{x}{\norm{x}} = 2x
 
 \begin{minipage}[t]{.4\textwidth}
   \begin{flalign*}
-    J_f(x) &= \qty\Big( \frac{1}{\sqrt{1 - \norm{x}^2}} + \frac{x}{\qty(1 - \norm{x}^2)^{\frac{3}{2}}} \cdot x )& \\
-    &= \frac{1 - \norm{x}^2 + x^2}{\qty(1 - \norm{x}^2)^{\frac{3}{2}}}
+    J_f(x) &= \qty( \frac{1}{\sqrt{1 - \norm{x}^2}} + \frac{x}{\qty(1 - \norm{x}^2)^{\frac{3}{2}}} \cdot x )& \\
+    &= \qty(\frac{1 - \norm{x}^2 + x^2}{\qty(1 - \norm{x}^2)^{\frac{3}{2}}})
   \end{flalign*}
 \end{minipage}
 \begin{minipage}[t]{.4\textwidth}
   \begin{flalign*}
-    J_g(y) &= \qty\Big( \frac{1}{\sqrt{1 + \norm{y}^2}} - \frac{y}{\qty(1 + \norm{y}^2)^{\frac{3}{2}}} \cdot y )& \\
-    &= \frac{1 + \norm{y}^2 - y^2}{\qty(1 + \norm{y}^2)^{\frac{3}{2}}}
+    J_g(y) &= \qty( \frac{1}{\sqrt{1 + \norm{y}^2}} - \frac{y}{\qty(1 + \norm{y}^2)^{\frac{3}{2}}} \cdot y )& \\
+    &= \qty(\frac{1 + \norm{y}^2 - y^2}{\qty(1 + \norm{y}^2)^{\frac{3}{2}}})
   \end{flalign*}
 \end{minipage}
 Die Ableitungen $(x) \mapsto J_f(x), y \mapsto J_g(y)$
