--- a/courses/an20/homework/ha11.tex
+++ b/courses/an20/homework/ha11.tex
@@ -45,7 +45,7 @@ definiert durch $F(x, y, z) = x^4z - 2xy^3 + yz^3 - 8$.
   \subparagraph{Lösung:}
   \begin{flalign*}
     J_F &= \qty\Big(\begin{array}{>{\color{red}} c >{\color{red}} c >{\color{blue}} c}
-      4x^3z - 2y^3 & z^3 - 6y^2 & x^4 + 3yz^2
+      4x^3z - 2y^3 & z^3 - 6xy^2 & x^4 + 3yz^2
     \end{array}) &
   \end{flalign*}
   Dabei teilt sich die Jakobimatrix auf in
@@ -82,14 +82,14 @@ definiert durch $F(x, y, z) = x^4z - 2xy^3 + yz^3 - 8$.
   \begin{flalign*}
     J_f(x, y) &= - \qty\Big(J_F^{(z)}(x, y, f(x, y)))^{-1} \cdot J_F^{(x, y)}(x, y, f(x, y)) & \\
     &= - \qty\Big(x^4 + 3y\qty\big(f(x))^2)^{-1} \cdot \begin{pmatrix}
-      4x^3f(x) - 2 y^3 & \qty\big(f(x))^3 - 6y^2
+      4x^3f(x) - 2 y^3 & \qty\big(f(x))^3 - 6xy^2
     \end{pmatrix} \\
     &= - \frac{1}{x^4 + 3y\qty\big(f(x))^2} \cdot \begin{pmatrix}
-      4x^3f(x) - 2 y^3 & \qty\big(f(x))^3 - 6y^2
+      4x^3f(x) - 2 y^3 & \qty\big(f(x))^3 - 6xy^2
     \end{pmatrix} \\
     &= \begin{pmatrix}
       \frac{4x^3f(x) - 2 y^3}{x^4 + 3y\qty\big(f(x))^2} &
-      \frac{\qty\big(f(x))^3 - 6y^2}{x^4 + 3y\qty\big(f(x))^2}
+      \frac{\qty\big(f(x))^3 - 6xy^2}{x^4 + 3y\qty\big(f(x))^2}
     \end{pmatrix} \\
   \end{flalign*}
 
