--- a/courses/an20/exercises/ex12.tex
+++ b/courses/an20/exercises/ex12.tex
@@ -133,20 +133,20 @@ $\nabla F(\overline{x}, \overline{y}, \overline{\lambda}) = (0, 0, 0)$.
 \setcounter{section}{1}
 \begin{align}
   \frac{\partial F}{\partial x} (\ldots) &= 2(x - 1) - 2 \lambda x
-  = 2(x(1 - \lambda) - 1) = 0 & \label{eq:1_1} \\
-  \frac{\partial F}{\partial y} (\ldots) &= 2y + 2\lambda y = 2y(1 + \lambda) = 0 \label{eq:1_2} \\
-  \frac{\partial F}{\partial \lambda} (\ldots) &= h(x, y) = y^2 - x^2 - 1 = 0 \label{eq:1_3}
+  = 2(x(1 - \lambda) - 1) = 0 & \label{eq:1-1} \\
+  \frac{\partial F}{\partial y} (\ldots) &= 2y + 2\lambda y = 2y(1 + \lambda) = 0 \label{eq:1-2} \\
+  \frac{\partial F}{\partial \lambda} (\ldots) &= h(x, y) = y^2 - x^2 - 1 = 0 \label{eq:1-3}
 \end{align}
 $\Rightarrow$ nichtlineares Gleichungssystem.
 
-$\hyperref[eq:1_2]{(2)} \iff y = 0 \lor \lambda = -1$
+$\hyperref[eq:1-2]{(2)} \iff y = 0 \lor \lambda = -1$
 
-$y = 0$ in $\hyperref[eq:1_3]{(3)}$ einsetzen führt zu $-x^2 - 1 = 0$, nicht lösbar.
+$y = 0$ in $\hyperref[eq:1-3]{(3)}$ einsetzen führt zu $-x^2 - 1 = 0$, nicht lösbar.
 $\Rightarrow y \ne 0 \land \lambda = -1$
 
 $\lambda = -1$ in $(1)$ einsetzen: $2x - 1 = 0 \Rightarrow x_1 = \frac{1}{2}$
 
-$x_1 = \frac{1}{2}$ in $\hyperref[eq:1_3]{(3)}$ einsetzen:
+$x_1 = \frac{1}{2}$ in $\hyperref[eq:1-3]{(3)}$ einsetzen:
 $y^2 = \frac{5}{4}, y_{1|2} = \pm \frac{\sqrt{5}}{2}$.
 
 Kritische Punkte: $\qty(x_1, y_1) = \qty(\frac{1}{2}, \frac{\sqrt{5}}{2})$,
@@ -230,12 +230,12 @@ Betrachten Sie dazu folgendes Optimalitätsproblem
     \setcounter{equation}{0}
     \begin{flalign}
       \frac{\partial F}{\partial x_k}(x) &= 1 + \frac{\lambda}{x_k} = 0
-      \quad \text{für } k = 1, \ldots, N \label{eq:_2_1} & \\
-      \frac{\partial F}{\partial \lambda}(x) &= h(x) = \prod_{k = 1}^N x_k - 1 = 0 \label{eq:2_2}
+      \quad \text{für } k = 1, \ldots, N \label{eq:2-1} & \\
+      \frac{\partial F}{\partial \lambda}(x) &= h(x) = \prod_{k = 1}^N x_k - 1 = 0 \label{eq:2-2}
     \end{flalign}
-    $\hyperref[eq:2_1]{(1)} \Rightarrow x_k = - \lambda$ für $k = 1, \ldots, N$
+    $\hyperref[eq:2-1]{(1)} \Rightarrow x_k = - \lambda$ für $k = 1, \ldots, N$
     \[
-      \overset{\hyperref[eq:2_2]{(2)}}\Rightarrow h(x) =
+      \overset{\hyperref[eq:2-2]{(2)}}\Rightarrow h(x) =
       \prod_{k = 1}^N (-\lambda) - 1 = (-\lambda)^N - 1 = 0
     \]
     $\Rightarrow \lambda = -1 \Rightarrow x_k = 1$ für $k = 1, \ldots, N$
@@ -323,22 +323,22 @@ globale Extremstellen.
   $\Rightarrow$ der Satz von Lagrange ist anwendbar.
   \setcounter{equation}{0}
   \begin{flalign}
-    \frac{\partial F(\ldots)}{\partial x} &= 2x (1 + \lambda) + y = 0 \label{eq:3_1} & \\
-    \frac{\partial F(\ldots)}{\partial y} &= 2y (1 + \lambda) + x = 0 \label{eq:3_2} \\
-    \frac{\partial F(\ldots)}{\partial \lambda} &= x^2 + y^2 - 1 = 0 \label{eq:3_3}
+    \frac{\partial F(\ldots)}{\partial x} &= 2x (1 + \lambda) + y = 0 \label{eq:3-1} & \\
+    \frac{\partial F(\ldots)}{\partial y} &= 2y (1 + \lambda) + x = 0 \label{eq:3-2} \\
+    \frac{\partial F(\ldots)}{\partial \lambda} &= x^2 + y^2 - 1 = 0 \label{eq:3-3}
   \end{flalign}
-  Angenommen es gilt $x = 0 \overset{\hyperref[eq:3_1]{(1)}}\Rightarrow y = 0
-  \overset{\hyperref[eq:3_3]{(3)}}\Rightarrow -1 = 0$, Widerspruch.
+  Angenommen es gilt $x = 0 \overset{\hyperref[eq:3-1]{(1)}}\Rightarrow y = 0
+  \overset{\hyperref[eq:3-3]{(3)}}\Rightarrow -1 = 0$, Widerspruch.
 
-  Angenommen es gilt $y = 0 \overset{\hyperref[eq:3_2]{(2)}}\Rightarrow x = 0
-  \overset{\hyperref[eq:3_3]{(3)}}\Rightarrow -1 = 0$, Widerspruch.
+  Angenommen es gilt $y = 0 \overset{\hyperref[eq:3-2]{(2)}}\Rightarrow x = 0
+  \overset{\hyperref[eq:3-3]{(3)}}\Rightarrow -1 = 0$, Widerspruch.
 
   $\Rightarrow x \ne 0, y \ne 0$.
   \begin{flalign*}
-    \hyperref[eq:3_1]{(1)} \cdot y &= \hyperref[eq:3_2]{(2)} \cdot x & \\
+    \hyperref[eq:3-1]{(1)} \cdot y &= \hyperref[eq:3-2]{(2)} \cdot x & \\
     2xy (1 + \lambda) + y^2 &= 0 = 2xy (1 + \lambda) + x^2 \\
     y^2 &= x^2 \iff \abs{y} = \abs{x} \iff y = \pm x \\
-    \hyperref[eq:3_3]{(3)} &\Rightarrow h(x, \pm x) = 2x^2 - 1 = 0 \Rightarrow x_{1|2} = \pm \frac{1}{\sqrt{2}}
+    \hyperref[eq:3-3]{(3)} &\Rightarrow h(x, \pm x) = 2x^2 - 1 = 0 \Rightarrow x_{1|2} = \pm \frac{1}{\sqrt{2}}
   \end{flalign*}
   Kritische Punkte:
   \begin{enumerate}[
